syntax = "proto3";

package fileservice;
option go_package = "github.com/andrej/sansibar-fileservice/fileservice";  // Use your module path here

service FileService {
    // Upload method with a bi-directional stream for chunked upload
    rpc Upload(stream Chunk) returns (UploadStatus);

    // Resumable upload initiation
    rpc ResumeUpload(ResumeRequest) returns (ResumeStatus);
}

message Chunk {
    string file_id = 1;    // Unique identifier for the file
    int64 offset = 2;      // Offset for resuming upload
    bytes data = 3;        // Actual chunk data
}

message UploadStatus {
    bool success = 1;
    string message = 2;
    int64 last_offset = 3;  // The last successfully uploaded offset
}

message ResumeRequest {
    string file_id = 1;    // File ID to resume upload
}

message ResumeStatus {
    int64 last_offset = 1;  // The last uploaded offset
}

